feat(post-search): add search posts without userId
